--- a/contrib/scheme/css/schemecolors.css
+++ b/contrib/scheme/css/schemecolors.css
@@ -18,42 +18,12 @@ pre.code, .editbox {
   margin: 0;
 }
 
-span.js-punctuation {
-  color: #666666;
-}
 
-span.js-operator {
-  color: #666666;
-}
-
-span.js-keyword {
-  color: #770088;
-}
-
-span.js-atom {
-  color: #228811;
-}
-
-span.js-variable {
-  color: black;
-}
-
-span.js-variabledef {
-  color: #0000FF;
-}
-
-span.js-localvariable {
-  color: #004499;
-}
-
-span.js-property {
-  color: black;
-}
-
-span.js-comment {
-  color: #AA7700;
-}
-
-span.js-string {
-  color: #AA2222;
-}
+span.scheme-string	{color: green;}
+span.scheme-number	{color: blue;}
+span.scheme-boolean     {color: darkred;}
+span.scheme-character	{color: orange;}
+span.scheme-symbol	{color: steelblue;}
+span.scheme-punctuation {color: black;}
+span.scheme-lparen      {color: black;}
+span.scheme-rparen      {color: black;}
