--- a/contrib/scheme/css/schemecolors.css
+++ b/contrib/scheme/css/schemecolors.css
@@ -1,8 +1,13 @@
 html {
   cursor: text;
+  width: 100%;
+  height: 100%;
+  background-color: white;
 }
 
 .editbox {
+  width: 100%;
+  height: 100%;
   margin: .4em;
   padding: 0;
   font-family: monospace;
