paren highlighting will be done through styles.

--- a/contrib/scheme/css/schemecolors.css
+++ b/contrib/scheme/css/schemecolors.css
@@ -38,9 +38,9 @@ span.scheme-comment     { color: orange; }
 
 span.good-matching-paren { 
     font-weight: bold;
-/*     color: blue;  */
+    color: #3399FF;  
 }
 span.bad-matching-paren {
     font-weight: bold;
-/*      color: red;  */
+    color: red;
 }
