--- a/contrib/scheme/css/schemecolors.css
+++ b/contrib/scheme/css/schemecolors.css
@@ -8,7 +8,7 @@ html {
 .editbox {
   width: 100%;
   height: 100%;
-  margin: .4em;
+  margin: 0pt;
   padding: 0;
   font-family: monospace;
   font-size: 10pt;
